@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/cm/cm-2.4.2.ebuild,v 1.9 2005/07/25 12:12:44 dholm Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/cm/cm-2.4.2.ebuild,v 1.10 2007/01/10 19:47:14 peper Exp $
 
 IUSE="doc"
 
@@ -12,7 +12,7 @@ LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="amd64 ~ppc sparc x86"
 
-DEPEND=">=dev-util/guile-1.6.4"
+DEPEND=">=dev-scheme/guile-1.6.4"
 
 src_install() {
 	newbin ${FILESDIR}/${PN}-2.4.0-exec ${PN}
