@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/cm
-# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/cm/ChangeLog,v 1.10 2005/07/25 12:12:44 dholm Exp $
+# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/media-sound/cm/ChangeLog,v 1.11 2007/01/10 19:47:14 peper Exp $
+
+  10 Jan 2007; Piotr Jaroszyński <peper@gentoo.org> cm-2.4.2.ebuild:
+  Dependency update: dev-util/guile -> dev-scheme/guile.
 
   25 Jul 2005; David Holm <dholm@gentoo.org> cm-2.4.2.ebuild:
   Added to ~ppc.
